font color changed

--- a/Analog Clock/style.css
+++ b/Analog Clock/style.css
@@ -100,7 +100,7 @@ body{
     transform: rotate(270deg);
 }
 .date{
-    color:dodgerblue;
+    color:whitesmoke;
     position:absolute;
     font-size: 50px;
     font-weight: bold;
