--- a/Todo List/style.css
+++ b/Todo List/style.css
@@ -47,7 +47,9 @@ form{
     cursor: pointer;
     background-color: white;
     padding: 1rem 2rem;
-    border-top: 3px solid #e5e5e5
+    border-top: 3px solid #e5e5e5;
+    /* width: fit-content; */
+    /* height: fit-content; */
 
 }
 .todos li.completed {
